--- a/identipy_app/static/css/small.css
+++ b/identipy_app/static/css/small.css
@@ -11,6 +11,8 @@ body
 		background-size: cover;
         font-family:sans-serif,sans-serif;
         font-size:0.8em;
+        overflow-y:scroll;
+
 	}
 *{margin:0;padding:0;}
 
@@ -235,6 +237,7 @@ input[type="email"],input[type="password"], input[id="email"], textarea{
 
 .backbtn:hover{
     background:#FFBF00;
+    color:#fff;
 }
 .link, a{
     font-size: 1em;
@@ -308,11 +311,11 @@ div.inthemiddle h2{
     margin-top:0;
     width:100%;
     text-align:center;
-    font-size: 1.6em;
+    font-size: 1.5em;
     color:#555555;
     font-weight:bold;
     text-indent:0;
-        
+    display:block;
 }
 
 .inthemiddle img{
